--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.2",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
+    "react-native-windows": "^0.63.20",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
-    "tic-tac-toe-ai-engine": "^1.0.9"
+    "tic-tac-toe-ai-engine": "^1.0.9",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "patch-package": "^6.2.2",
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
