--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.rndemo">
+package="nz.co.swiftlymobile.rndemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -22,6 +22,8 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+<meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/GOOGLE_MAPS_ANDROID_API_KEY" />
+
     </application>
 
 </manifest>
