Added missing item to .env example

--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,4 @@
 # Create a file named .env from this file
 # and replace the values below with your own
 GOOGLE_MAPS_API_KEY=abcdefgh
+GOOGLE_MAPS_ANDROID_API_KEY=zyxwvuts
