--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 12 Pro Max'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.42.0",
     "react-native-config": "^1.4.2",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "0.27.1",
+    "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
