--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-sensors": "^7.0.2",
     "react-native-vector-icons": "^8.0.0",
     "react-native-windows": "^0.63.20",
     "react-navigation": "^4.4.3",
