--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-sensors": "^7.0.2",
+    "react-native-shared-element": "^0.7.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-windows": "^0.63.20",
     "react-navigation": "^4.4.3",
+    "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
     "tic-tac-toe-ai-engine": "^1.0.9",
