Shared element transition working nicely with scrollview

--- a/package.json
+++ b/package.json
@@ -14,25 +14,28 @@
     "@react-native-community/cameraroll": "^4.0.2",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-masked-view/masked-view": "^0.2.2",
+    "@react-navigation/core": "3.7.5",
+    "@react-navigation/native": "^5.9.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-camera": "^3.42.0",
     "react-native-config": "^1.4.2",
     "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.27.1",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1",
+    "react-native-screens": "^2.18.0",
     "react-native-sensors": "^7.0.2",
     "react-native-shared-element": "^0.7.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-windows": "^0.63.20",
-    "react-navigation": "^4.4.3",
+    "react-navigation": "4.3.8",
     "react-navigation-shared-element": "^2.3.1",
-    "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1",
+    "react-navigation-stack": "^2.8.4",
+    "react-navigation-tabs": "2.8.12",
     "tic-tac-toe-ai-engine": "^1.0.9",
     "typescript": "^4.1.3"
   },
