--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'rndemo' do
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
   # Add new pods below this line
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   # pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
@@ -26,10 +28,31 @@ target 'rndemo' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!({ 'Flipper' => '0.74.0' })
   post_install do |installer|
     flipper_post_install(installer)
+    
+		installer.pods_project.targets.each do |target|
+			target.build_configurations.each do |config|
+				config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
+			end
+		end
   end
 end
 
 
+
+#post_install do |installer|
+#  installer.pods_project.build_configurations.each do |config|
+#    config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+#  end
+#end
+#
+#
+#post_install do |installer|
+#  installer.pods_project.targets.each do |target|
+#    target.build_configurations.each do |config|
+#      config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
+#    end
+#  end
+#end
