--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-maps": "0.27.1",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
+    "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.0",
     "react-native-sensors": "^7.0.2",
@@ -33,11 +34,13 @@
     "react-native-vector-icons": "^8.0.0",
     "react-native-windows": "^0.63.20",
     "react-navigation": "4.3.8",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.8.4",
     "react-navigation-tabs": "2.8.12",
     "tic-tac-toe-ai-engine": "^1.0.9",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "use-memo-one": "^1.1.2"
   },
   "devDependencies": {
     "patch-package": "^6.2.2",
