--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^2.18.0",
     "react-native-sensors": "^7.0.2",
     "react-native-shared-element": "^0.7.0",
+    "react-native-touchable-scale": "^2.1.2",
     "react-native-vector-icons": "^8.0.0",
     "react-native-windows": "^0.63.20",
     "react-navigation": "4.3.8",
@@ -43,7 +44,6 @@
     "use-memo-one": "^1.1.2"
   },
   "devDependencies": {
-    "patch-package": "^6.2.2",
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
@@ -51,6 +51,7 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "patch-package": "^6.2.2",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
