--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "react-navigation": "4.3.8",
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
-    "react-navigation-stack": "^2.8.4",
-    "react-navigation-tabs": "2.8.12",
+    "react-navigation-stack": "^2.10.3",
+    "react-navigation-tabs": "^2.10.1",
     "tic-tac-toe-ai-engine": "^1.0.9",
     "typescript": "^4.1.3",
     "use-memo-one": "^1.1.2"
