--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.2",
     "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/core": "3.7.5",
     "@react-navigation/native": "^5.9.3",
@@ -24,6 +23,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.27.1",
+    "react-native-paper": "^3.12.0",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^16.0.8",
@@ -36,6 +36,7 @@
     "react-native-windows": "^0.63.20",
     "react-navigation": "4.3.8",
     "react-navigation-hooks": "^1.1.0",
+    "react-navigation-material-bottom-tabs": "^2.3.4",
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.10.3",
     "react-navigation-tabs": "^2.10.1",
