Added bar chart

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/core": "3.7.5",
     "@react-navigation/native": "^5.9.3",
+    "date-fns": "^2.19.0",
+    "numeral": "^2.0.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-camera": "^3.42.0",
@@ -25,6 +27,7 @@
     "react-native-maps": "0.27.1",
     "react-native-paper": "^3.12.0",
     "react-native-permissions": "^3.0.0",
+    "react-native-popable": "^0.3.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "^3.1.9",
