--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,9 +28,9 @@ target 'rndemo' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.74.0' })
+#  use_flipper!({ 'Flipper' => '0.74.0' })
   post_install do |installer|
-    flipper_post_install(installer)
+#    flipper_post_install(installer)
     
 		installer.pods_project.targets.each do |target|
 			target.build_configurations.each do |config|
